--- a/head.html
+++ b/head.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="/scripts/scripts.js" type="module"></script>
+<link rel="stylesheet" href="/styles/fonts.css"/>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
 <script type="text/javascript" src="https://s7d1.scene7.com/s7viewers/libs/responsive_image.js"></script>
