--- a/head.html
+++ b/head.html
@@ -3,3 +3,6 @@
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
 <script type="text/javascript" src="https://s7d1.scene7.com/s7viewers/libs/responsive_image.js"></script>
+<script type="text/javascript" src="https://publish-p107529-e1006538.adobeaemcloud.com/etc/clientlibs/clientlib-pldt/js/at.js"></script>
+
+
